@@ -15,6 +15,9 @@ cupt (2.3.0~) UNRELEASED; urgency=low
       - Don't print misleading 'Performing requested actions' when there is
         nothing to do.
       - New option '--show-not-preferred'.
+    - 'search':
+      - Output short description(s) even if all search expressions was found in
+        the package name.
   * lib:
     - system/resolvers/native:
       - Removing automatically installed packages: stopped considering
